# scHub

./: .codecov.yaml  .cruft.json  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: 01-bug_report.yml
.github/workflows/: build.yaml  pre_release.yaml  test.yaml
docs/: conf.py  contributing.md  index.md  references.bib
docs/api/: index.md  preprocessing.md  tools.md
docs/tutorials/: index.rst  index_preprocessing.md  index_tools.md
docs/tutorials/notebooks/pp/: tutorial_cell_sketching.ipynb  tutorial_delve_fs.ipynb
docs/tutorials/notebooks/tool/: tutorial_kme_analysis.ipynb
src/schub/: __init__.py  _constants.py  _version.py
src/schub/data/: __init__.py  _ann_dataset.py  _constants.py  _manager.py  _sample_anndata.py  _types.py  _utils.py
src/schub/data/fields/: __init__.py  _arraylike_field.py  _base_field.py  _dataframe_field.py  _layer_field.py
src/schub/dataloader/: __init__.py  _data_collator.py  _data_splitter.py
src/schub/model/: __init__.py  _cytoset.py
src/schub/model/base/: __init__.py  _base_model.py  _module_mixin.py  _training_mixin.py
src/schub/module/: __init__.py  _set_modules.py
src/schub/nn/: __init__.py  _fc_layer.py  _set_layer.py  utils.py
src/schub/preprocessing/: __init__.py  _delve.py  _sketch.py
src/schub/tl/: __init__.py  _ckme.py  _cytoemd.py  _kme.py
src/schub/train/: __init__.py  _trainrunner.py
src/schub/transform/: __init__.py  _random_fourier_transform.py
src/schub/utils/: __init__.py  _attrdict.py  _scanpy_utis.py
tests/: test_basic.py  test_data.py  test_models.py  test_transforms.py
